// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgramSidebar /> renders correctly 1`] = `
<div>
  <div>
    <h4
      class="mb-2"
    >
      Get Technical Support
    </h4>
    <p>
      <a
        href="https://support.edx.org/hc/en-us/sections/360007968853-Master-s-student-help"
        rel="noopener noreferrer"
        target="_blank"
      >
        Go to edX help center
        <svg
          aria-hidden="false"
          aria-label="opens in a new window"
          class="svg-inline--fa fa-up-right-from-square fa-sm ml-2 text-info"
          data-icon="up-right-from-square"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M352 0c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9L370.7 96 201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L416 141.3l41.4 41.4c9.2 9.2 22.9 11.9 34.9 6.9s19.8-16.6 19.8-29.6l0-128c0-17.7-14.3-32-32-32L352 0zM80 32C35.8 32 0 67.8 0 112L0 432c0 44.2 35.8 80 80 80l320 0c44.2 0 80-35.8 80-80l0-112c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 112c0 8.8-7.2 16-16 16L80 448c-8.8 0-16-7.2-16-16l0-320c0-8.8 7.2-16 16-16l112 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L80 32z"
            fill="currentColor"
          />
        </svg>
      </a>
    </p>
  </div>
</div>
`;

exports[`<ProgramSidebar /> renders correctly with links 1`] = `
<div>
  <div
    class="mb-5"
  >
    <h4
      class="mb-2"
    >
      Program Documents
    </h4>
    <nav
      aria-label="program documents"
    >
      <ul
        class="list-unstyled mb-2"
        id="program-documents"
      >
        <li
          class="mb-1"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-file mr-2 text-info"
            data-icon="file"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 384 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 64C0 28.7 28.7 0 64 0L224 0l0 128c0 17.7 14.3 32 32 32l128 0 0 288c0 35.3-28.7 64-64 64L64 512c-35.3 0-64-28.7-64-64L0 64zm384 64l-128 0L256 0 384 128z"
              fill="currentColor"
            />
          </svg>
          <a
            href="/test/document"
            rel="noopener noreferrer"
            target="_blank"
          >
            Test Document
          </a>
        </li>
        <li
          class="mb-1"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-file mr-2 text-info"
            data-icon="file"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 384 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 64C0 28.7 28.7 0 64 0L224 0l0 128c0 17.7 14.3 32 32 32l128 0 0 288c0 35.3-28.7 64-64 64L64 512c-35.3 0-64-28.7-64-64L0 64zm384 64l-128 0L256 0 384 128z"
              fill="currentColor"
            />
          </svg>
          <a
            href="example.com/1"
            rel="noopener noreferrer"
            target="_blank"
          >
            Test Link
          </a>
        </li>
        <li
          class="mb-1"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-file mr-2 text-info"
            data-icon="file"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 384 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 64C0 28.7 28.7 0 64 0L224 0l0 128c0 17.7 14.3 32 32 32l128 0 0 288c0 35.3-28.7 64-64 64L64 512c-35.3 0-64-28.7-64-64L0 64zm384 64l-128 0L256 0 384 128z"
              fill="currentColor"
            />
          </svg>
          <a
            href="/test/document2"
            rel="noopener noreferrer"
            target="_blank"
          >
            Test Document 2
          </a>
        </li>
      </ul>
    </nav>
  </div>
  <div>
    <h4
      class="mb-2"
    >
      Get Technical Support
    </h4>
    <p>
      <a
        href="https://support.edx.org/hc/en-us/sections/360007968853-Master-s-student-help"
        rel="noopener noreferrer"
        target="_blank"
      >
        Go to edX help center
        <svg
          aria-hidden="false"
          aria-label="opens in a new window"
          class="svg-inline--fa fa-up-right-from-square fa-sm ml-2 text-info"
          data-icon="up-right-from-square"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M352 0c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9L370.7 96 201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L416 141.3l41.4 41.4c9.2 9.2 22.9 11.9 34.9 6.9s19.8-16.6 19.8-29.6l0-128c0-17.7-14.3-32-32-32L352 0zM80 32C35.8 32 0 67.8 0 112L0 432c0 44.2 35.8 80 80 80l320 0c44.2 0 80-35.8 80-80l0-112c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 112c0 8.8-7.2 16-16 16L80 448c-8.8 0-16-7.2-16-16l0-320c0-8.8 7.2-16 16-16l112 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L80 32z"
            fill="currentColor"
          />
        </svg>
      </a>
    </p>
  </div>
</div>
`;
